add global log level setting and save result in state

--- a/sense-voice/csrc/CMakeLists.txt
+++ b/sense-voice/csrc/CMakeLists.txt
@@ -1,3 +1,5 @@
+add_subdirectory(third-party/ggml)
+
 set(SOURCE_FILES
         common.h
         common.cc
@@ -13,5 +15,8 @@ set(SOURCE_FILES
         sense-voice.cc
 )
 
+include_directories(third-party/ggml/include)
+
 add_library(sense-voice-core STATIC ${SOURCE_FILES})
+target_compile_features(sense-voice-core PRIVATE cxx_std_11)
 target_link_libraries(sense-voice-core PRIVATE ggml)
